perl (5.18.0-1) UNRELEASED; urgency=low

  * New upstream release
    - update Breaks version for libpod-simple-perl 

 -- Dominic Hargreaves <dom@earth.li>  Sat, 18 May 2013 23:21:46 +0100

perl (5.18.0~rc1-1) experimental; urgency=low

  [ Niko Tyni ]
  * Reorder the packages in debian/control to improve robustness of
    the installation step.

  [ Dominic Hargreaves ]
  * Merge 5.14.2-21 from unstable:
    + Update the Locale::Maketext fix by importing 1.23, to avoid
      double-escaping problems (see: #695224)
  * Provide a more modern description of Perl in the long description
    of the perl package (Closes: #678307)
  * New upstream release
    - update Breaks versions in debian/control for dual-lived modules

  [ Niko Tyni ]
  * Update debian/copyright for 5.17.11.
  * Fix a few false positive format-security warnings from gcc.
  * Use the DESTDIR mechanism for installation instead of mangling the
    install paths before and after.
  * New upstream release candidate.

 -- Dominic Hargreaves <dom@earth.li>  Sat, 11 May 2013 22:33:07 +0100

perl (5.16.3-1) experimental; urgency=low

  * Remove Depends/Recommends/Suggests on modules deprecated in 5.12 and
    5.14 (Closes: #702094)
  * Fix FTBFS with findutils from experimental by not using deprecated
    permissions check syntax; thanks to Roland Stigge (Closes: #702562)
  * Merge 5.14.2-17, 5.14.2-18, 5.14.2-19 and 5.14.2-20 from unstable
    + Fix a double-free bug in Digest::SHA. (Closes: #698174)
      + update the Breaks: entry accordingly.
    + Avoid wraparound when casting unsigned size_t to signed ssize_t.
      (Closes: #698320)
    + [SECURITY] CVE-2013-1667: fix a rehashing DoS opportunity
      against code that uses arbitrary user input as hash keys.
      (Closes: #702296)
    + Fix an Encode memory leak that occurred in the UTF-8 encoding.
      (Closes: #702416)
      + upgrade the Broken versions of the separate libencode-perl
        package accordingly.